environments/production/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-app
spec:
  template:
    spec:
      containers:
        - name: dashboard-app
          # Updated by .github/workflows/commit.nuxt.yaml.
          image: ghcr.io/simonbrundin/dashboard:2f077782c93712720ed2e53f7a0dffdc81cfbbab
