environments/production/patches/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard-route
  namespace: dashboard
spec:
  hostnames:
    - "dashboard.simonbrundin.com"
